# x20chat

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_PYTHON.md  pyproject.toml  quickstart.sh  requirements.txt
client/: networking.py  peer.py  protocol.py
docs/: README.md
include/net/: Socket.h  UdpSocket.h
include/protocol/: Message.h
rendezvous/: rendezvous.cpp
scripts/: README.md
server/: signaling_server.py
src/: README.md  __init__.py  main.cpp
src/net/: Socket.cpp  UdpSocket.cpp
src/protocol/: Message.cpp
tests/: README.md
